    - sub version numbering scheme changed to suite setuptools version
      number rules
- sql
    - Text type is properly exported now and does not raise a warning
      on DDL create; String types with no length only raise warnings during
      CREATE TABLE [ticket:912]
      
    - fixed bug in union() so that select() statements which don't derive
      from FromClause objects can be unioned
      
- dialects
    - Fixed reflection of mysql empty string column defaults.

0.4.2b  (0.4.2r2)
------
- sql
    - changed name of TEXT to Text since its a "generic" type; TEXT name is
      deprecated until 0.5.  The "upgrading" behavior of String to Text 
      when no length is present is also deprecated until 0.5; will issue a
      warning when used for CREATE TABLE statements (String with no length
      for SQL expression purposes is still fine) [ticket:912]

    - generative select.order_by(None) / group_by(None) was not managing to 
      reset order by/group by criterion, fixed [ticket:924]

- orm
    - suppressing *all* errors in InstanceState.__cleanup() now.  

    - fixed an attribute history bug whereby assigning a new collection
      to a collection-based attribute which already had pending changes
      would generate incorrect history [ticket:922]
      
    - fixed delete-orphan cascade bug whereby setting the same
      object twice to a scalar attribute could log it as an orphan
      [ticket:925]
      
    - Fixed cascades on a += assignment to a list-based relation.
    
    - synonyms can now be created against props that don't exist yet,
      which are later added via add_property().  This commonly includes
      backrefs. (i.e. you can make synonyms for backrefs without
      worrying about the order of operations) [ticket:919]

    - fixed bug which could occur with polymorphic "union" mapper
      which falls back to "deferred" loading of inheriting tables
      
    - the "columns" collection on a mapper/mapped class (i.e. 'c')